# tardis

./: .gitignore  LICENSE  README.md  meson.build
.github/: update-workflows.sh
.github/workflows/: main.yml
data/: com.github.chasinglogic.tardis.appdata.xml  com.github.chasinglogic.tardis.appdata.xml.in  com.github.chasinglogic.tardis.desktop  com.github.chasinglogic.tardis.desktop.in  com.github.chasinglogic.tardis.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES  com.github.chasinglogic.tardis.pot  it.po  meson.build  nl.po  tr.po
po/extra/: POTFILES  extra.pot  it.po  nl.po
src/: Application.vala  BackupStatus.vala  BackupTarget.vala  BackupTargetManager.vala  Backups.vala  Onboarding.vala  Settings.vala  TardisDaemon.vala  Utils.vala  meson.build
src/Dbus/: Message.vala  Server.vala
src/Views/: DriveSelectionView.vala
src/Widgets/: BackupInProgress.vala  BackupMessage.vala  BackupNeeded.vala  BackupSafe.vala  BackupStatus.vala  BackupStatusCalculating.vala  BackupUnsafe.vala  DriveDisplay.vala  DriveManager.vala  DriveSelector.vala  DriveStatus.vala  HeaderBar.vala  MainView.vala  Row.vala  SettingToggler.vala
