sources = files (
    'Application.vala',
    'Backups.vala',
    'BackupTargetManager.vala',
    'BackupTarget.vala',
    'BackupStatus.vala',
    'Utils.vala',

    'Widgets/HeaderBar.vala',
    'Widgets/SettingToggler.vala',
    'Widgets/DriveStatus.vala',
    'Widgets/MainView.vala',
    'Widgets/DriveSelector.vala'
)
